# twoway-lib-generation

./: .coverage  CLAUDE.md  README.md  pyproject.toml  ruff.toml
examples/: config.yaml  motifs.csv  walkthrough.md
src/twoway_lib/: __init__.py  cli.py  config.py  construct.py  diversity.py  generator.py  hairpin.py  helix.py  io.py  length_solver.py  motif.py  optimizer.py  preprocessing.py  validation.py
tests/: conftest.py  test_cli.py  test_config.py  test_construct.py  test_diversity.py  test_generator.py  test_hairpin.py  test_helix.py  test_integration.py  test_io.py  test_length_solver.py  test_motif.py  test_optimizer.py  test_preprocessing.py  test_validation.py
