[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twoway-lib"
version = "0.1.0"
description = "Generate two-way junction RNA hairpin libraries with maximized sequence diversity"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Joe Yesselman", email = "jyesselm@unl.edu" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "click>=8.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "seq-tools",
    "rna-secstruct",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
twoway-lib = "twoway_lib.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/twoway_lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=twoway_lib --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/twoway_lib"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
